--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
+    "@fontsource/open-sans": "^5.0.28",
+    "@fontsource/raleway": "^5.0.19",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
