--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -13,6 +13,7 @@
     "@fontsource/open-sans": "^5.0.28",
     "@fontsource/raleway": "^5.0.19",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.5",
