--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@icons-pack/react-simple-icons": "^10.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
