--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
+    "@fontsource/montserrat": "^5.1.1",
     "@fontsource/open-sans": "^5.0.28",
     "@fontsource/raleway": "^5.0.19",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -19,7 +20,8 @@
     "@icons-pack/react-simple-icons": "^10.0.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
