--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^3.7.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/montserrat": "^5.1.1",
     "@fontsource/open-sans": "^5.0.28",
     "@fontsource/raleway": "^5.0.19",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@icons-pack/react-simple-icons": "^10.0.0",
+    "framer-motion": "^12.4.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
