--- a/ozioma-agaecheta/package.json
+++ b/ozioma-agaecheta/package.json
@@ -28,13 +28,13 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.3.19",
     "@types/react-dom": "^18",
     "@types/react-fontawesome": "^1.6.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.8.2"
   }
 }
